export type Permission = {
  id: string;
  resource: string;
};
