export interface ProductStatus {
  id: string;
  actif: boolean;
  name: string;
  products: any;
}
