export interface ProductType {
  id: string;
  type: string;
  products: any[];
}
