export type Role = {
  id: string;
  name: string;
  permissions: string[];
};
