export type User = {
  id: string;
  username: string;
  firstName: string;
  lastName: string;
  password: string;
  status: string;
  roleId: string;
  mRoleId: string;
};
